Fix particles